#890 [Promotion] Check negative discount percentage and end date of of promotion can not be before start date (#894)
* #890 [Promotion] Check negative discount percentage and end date of promotion can not be before start date

* Add test case for invalidDdateRange and invalidValueOfDiscount

* Re-format test class

* Configure test for DateRangeException

* Refractor exception

---------

Co-authored-by: Tuan Nguyen Trong Anh <tuan.nguyentronganh@nashtechglobal.com>