@@ -1,6 +1,10 @@
 package com.yas.promotion.service;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
 import com.yas.promotion.PromotionApplication;
+import com.yas.promotion.exception.BadRequestException;
 import com.yas.promotion.exception.DuplicatedException;
 import com.yas.promotion.model.Promotion;
 import com.yas.promotion.repository.PromotionRepository;
@@ -8,16 +12,12 @@ import com.yas.promotion.utils.Constants;
 import com.yas.promotion.viewmodel.PromotionDetailVm;
 import com.yas.promotion.viewmodel.PromotionListVm;
 import com.yas.promotion.viewmodel.PromotionPostVm;
+import java.time.ZonedDateTime;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-
-import java.time.ZonedDateTime;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @SpringBootTest(classes = PromotionApplication.class)
 class PromotionServiceTest {
@@ -27,7 +27,7 @@ class PromotionServiceTest {
     private PromotionService promotionService;
 
     private Promotion promotion1;
-    private Promotion promotion2;
+    private Promotion wrongRangeDatePromotion;
     private PromotionPostVm promotionPostVm;
 
     @BeforeEach
@@ -45,7 +45,7 @@ class PromotionServiceTest {
                 .build();
         promotion1 = promotionRepository.save(promotion1);
 
-        promotion2 = Promotion.builder()
+        Promotion promotion2 = Promotion.builder()
                 .name("Promotion 2")
                 .slug("promotion-2")
                 .description("Description 2")
@@ -56,7 +56,20 @@ class PromotionServiceTest {
                 .startDate(ZonedDateTime.now().minusDays(30))
                 .endDate(ZonedDateTime.now().plusDays(60))
                 .build();
-        promotion2 = promotionRepository.save(promotion2);
+        promotionRepository.save(promotion2);
+
+        wrongRangeDatePromotion = Promotion.builder()
+            .name("Wrong date")
+            .slug("wrong-date")
+            .description("Promotion with invalid date range")
+            .couponCode("codeWrong")
+            .discountAmount(200L)
+            .discountPercentage(20L)
+            .isActive(false)
+            .startDate(ZonedDateTime.now().minusDays(30))
+            .endDate(ZonedDateTime.now().minusDays(60))
+            .build();
+        wrongRangeDatePromotion = promotionRepository.save(wrongRangeDatePromotion);
     }
 
     @AfterEach
@@ -86,11 +99,24 @@ class PromotionServiceTest {
 
     @Test
     void createPromotion_WhenExistedSlug_ThenDuplicatedExceptionThrown() {
-        PromotionPostVm promotionPostVm = PromotionPostVm.builder()
+        promotionPostVm = PromotionPostVm.builder()
                 .slug(promotion1.getSlug())
                 .build();
         assertThrows(DuplicatedException.class, () -> promotionService.createPromotion(promotionPostVm),
                 String.format(Constants.ErrorCode.SLUG_ALREADY_EXITED, promotionPostVm.slug()));
+    }
+
+    @Test
+    void createPromotion_WhenEndDateBeforeStartDate_ThenDateRangeExceptionThrown() {
+        promotionPostVm = PromotionPostVm.builder()
+            .endDate(wrongRangeDatePromotion.getEndDate())
+            .startDate(wrongRangeDatePromotion.getStartDate())
+            .build();
+
+        BadRequestException exception = assertThrows(BadRequestException.class, () ->
+            promotionService.createPromotion(promotionPostVm)
+        );
+        assertEquals(String.format(Constants.ErrorCode.DATE_RANGE_INVALID), exception.getMessage());
     }
 
     @Test
@@ -99,7 +125,7 @@ class PromotionServiceTest {
                 "Promotion", "code",
                 ZonedDateTime.now().minusDays(120), ZonedDateTime.now().plusDays(120));
         assertEquals(2, result.promotionDetailVmList().size());
-        PromotionDetailVm promotionDetailVm = result.promotionDetailVmList().get(0);
+        PromotionDetailVm promotionDetailVm = result.promotionDetailVmList().getFirst();
         assertEquals("promotion-1", promotionDetailVm.slug());
     }
 }
